--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,12 @@ button {
   background: white;
   border-radius: 8px;
   padding: 1rem;
-  width: 280px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  width: 75%;
+  box-shadow: 0 2px 6px rgba(41, 13, 220, 0.2);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: start;
 }
 
 @media (min-width: 600px) {
@@ -59,5 +63,21 @@ button {
     }
     .buttons button {
         width: auto;
+    }
+    .user-card {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        gap: 1rem;
+        
+    }
+}
+
+@media (min-width: 1300px) {
+    .user-card {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: auto;
+        gap: 1rem;
     }
 }
